# Solarium

./: .gitignore  :wq!  BUILD  README.md  Solarium.nuspec  WORKSPACE  protoc-gen-doc.bzl
client/: Solarium.cs
clients/discord/cmd/discord-bot/: BUILD.bazel  main.go
clients/discord/pkg/discord/: BUILD.bazel  discord.go
clients/discord/pkg/handlers/newgame/: BUILD.bazel  newgame.go
cmd/client/: BUILD.bazel  client.go
cmd/solarium/: BUILD.bazel  cloudbuild.yaml  solarium.go
docs/: docs.md
pkg/events/: BUILD.bazel  const.go  eventCalm.go  eventEquilibriumConstant.go  eventGenerator.go  eventSolarStorm.go  eventSolarStormCooling.go
pkg/game/: BUILD.bazel  game.go
pkg/game/interfaces/: BUILD.bazel  interfaces.go
pkg/gamemodes/desert-planet/: BUILD.bazel  README.md  actions.go  desert.go  playerstatus.go
pkg/gamemodes/desert-planet/jobs/gather-components/: BUILD.bazel  components.go
pkg/gamemodes/desert-planet/jobs/gather-food/: BUILD.bazel  food.go
pkg/gamemodes/desert-planet/jobs/gather-water/: BUILD.bazel  water.go
pkg/gamemodes/desert-planet/jobs/idle/: BUILD.bazel  idle.go
pkg/gamemodes/desert-planet/player/: BUILD.bazel  player.go
pkg/gamemodes/desert-planet/player/conditions/: BUILD.bazel  condition.go
pkg/gamemodes/desert-planet/player/conditions/hunger/: BUILD.bazel  hunger.go
pkg/gamemodes/desert-planet/player/conditions/thirst/: BUILD.bazel  thirst.go
pkg/gamemodes/desert-planet/proto/: BUILD.bazel  desert.proto
pkg/gamemodes/thewolfgame/: BUILD.bazel  player.go  wolf.go
pkg/gamemodes/thewolfgame/proto/: BUILD.bazel  wolf.proto
pkg/namegenerator/: BUILD.bazel  generator.go
pkg/planet/: BUILD.bazel  planet.go  planet_test.go  planetproperties.go
pkg/planet/effects/: BUILD.bazel  interfaces.go  solarStorm.go
pkg/planet/hardware/: BUILD.bazel  heatshields.go  interfaces.go
pkg/planet/namegenerator/: BUILD.bazel  namegenerator.go
pkg/properties/: BUILD.bazel  properties.go  v1.go
pkg/server/: BUILD.bazel  doaction.go  gamemodes.go  gamestatus.go  gameupdate.go  globalupdate.go  joingame.go  newgame.go  server.go
pkg/system/: BUILD.bazel  system.go  system_test.go
pkg/system/interfaces/: BUILD.bazel  interfaces.go
proto/: BUILD.bazel  solarium.proto
proto/nuget/: Package.nuspec  README.md  Solarium.cs  SolariumGrpc.cs
proto/nuget/content/: Solarium.cs  SolariumGrpc.cs
site/: BUILD  cloudbuild.yaml  config.toml
site/content/: BUILD  _index.md
tools/: BUILD  golang_version_stamper.sh
