load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_dotnet//dotnet:defs.bzl", "core_library")

proto_library(
    name = "proto_proto",
    srcs = ["solarium.proto"],
    visibility = ["//visibility:public"],
    deps = ["//pkg/gamemodes/desert-planet/proto:proto_proto"]
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/chronojam/solarium/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
    deps = ["//pkg/gamemodes/desert-planet/proto:go_default_library"]
)

go_library(
    name = "go_default_library",
    embed = [":proto_go_proto"],
    importpath = "github.com/chronojam/solarium/proto",
    visibility = ["//visibility:public"],
)

# C#
load("@build_stack_rules_proto//csharp:csharp_proto_compile.bzl", "csharp_proto_compile")
load("@build_stack_rules_proto//csharp:csharp_grpc_library.bzl", "csharp_grpc_library")
load("@build_stack_rules_proto//csharp:csharp_grpc_compile.bzl", "csharp_grpc_compile")

csharp_grpc_compile(
    name = "csharp_grpc",
    deps = [
        ":proto_proto",
    ],
)

core_library(
    name = "csharp_grpc_lib",
    srcs = [
        ":csharp_grpc",
        "//pkg/gamemodes/desert-planet/proto:csharp_grpc",
    ],
    deps = [
        "@google.protobuf//:netstandard2.0_net",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:system.io.dll",
        "@grpc.core//:netstandard2.0_net",
        "@grpc.core.api//:netstandard2.0_net",
        "@system.interactive.async//:netstandard2.0_net",
        "@io_bazel_rules_dotnet//dotnet/stdlib.core:netstandard.library.dll",
    ],
    visibility = ["//visibility:public"],
)