load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["solarium.go"],
    importpath = "github.com/example/project/cmd/solarium",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/planet:go_default_library",
        "//pkg/system:go_default_library",
    ],
)

go_binary(
    name = "solarium",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
