load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["solarium.go"],
    importpath = "github.com/chronojam/solarium/cmd/solarium",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/server:go_default_library",
        "//proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "solarium",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
    x_defs = {"Version": "{SEMVER_VERSION}"},
)
