load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "const.go",
        "eventCalm.go",
        "eventGenerator.go",
        "eventSolarStorm.go",
    ],
    importpath = "github.com/chronojam/solarium/pkg/events",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/planet/effects:go_default_library",
        "//pkg/system/interfaces:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
