load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["game.go"],
    importpath = "github.com/chronojam/solarium/pkg/game",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/events:go_default_library",
        "//pkg/game/interfaces:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
