load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/chronojam/solarium/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/game/interfaces:go_default_library",
        "//pkg/gamemodes/desert-planet:go_default_library",
        "//proto:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
