load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["system.go"],
    importpath = "github.com/example/project/pkg/system",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/events:go_default_library",
        "//pkg/system/interfaces:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["system_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/events:go_default_library",
        "//pkg/planet:go_default_library",
        "//pkg/properties:go_default_library",
        "//pkg/system/interfaces:go_default_library",
    ],
)
