load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["desert.go"],
    importpath = "github.com/chronojam/solarium/pkg/gamemodes/desert-planet",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/game/interfaces:go_default_library",
        "//pkg/gamemodes/desert-planet/jobs/gather-components:go_default_library",
        "//pkg/gamemodes/desert-planet/jobs/gather-food:go_default_library",
        "//pkg/gamemodes/desert-planet/jobs/gather-water:go_default_library",
        "//pkg/gamemodes/desert-planet/jobs/idle:go_default_library",
        "//pkg/gamemodes/desert-planet/player:go_default_library",
        "//pkg/gamemodes/desert-planet/player/conditions:go_default_library",
        "//pkg/gamemodes/desert-planet/player/conditions/hunger:go_default_library",
        "//pkg/gamemodes/desert-planet/player/conditions/thirst:go_default_library",
    ],
)
