load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "actions.go",
        "desert.go",
    ],
    importpath = "github.com/chronojam/solarium/pkg/gamemodes/desert-planet",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gamemodes/desert-planet/proto:go_default_library",
        "//proto:go_default_library",
        "@com_github_google_uuid//:go_default_library",
    ],
)
