load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "player.go",
        "wolf.go",
    ],
    importpath = "github.com/chronojam/solarium/pkg/gamemodes/thewolfgame",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gamemodes/thewolfgame/proto:go_default_library",
        "//proto:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
