load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

go_library(
    name = "go_default_library",
    embed = [":proto_go_proto"],
    importpath = "github.com/chronojam/solarium/pkg/gamemodes/desert/proto",
    visibility = ["//visibility:public"],
)

proto_library(
    name = "proto_proto",
    srcs = ["desert.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "proto_go_proto",
    importpath = "github.com/chronojam/solarium/pkg/gamemodes/desert/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
)

load("@build_stack_rules_proto//csharp:csharp_proto_compile.bzl", "csharp_proto_compile")

csharp_proto_compile(
    name = "csharp_grpc",
    deps = [":proto_proto"],
    visibility = ["//visibility:public"],
)
