load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["newgame.go"],
    importpath = "github.com/chronojam/solarium/clients/discord/pkg/handlers/newgame",
    visibility = ["//visibility:public"],
    deps = [
        "//clients/discord/pkg/discord:go_default_library",
        "//proto:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)
